--- a/style.css
+++ b/style.css
@@ -11,12 +11,18 @@
 section {
     width: 800px;
     margin: auto;
+    background-color: crimson;
+    height: 100%;
 }
 
 button {
     background-color: #efefef;
     border: none;
     cursor: pointer;
+}
+
+button > img{
+    pointer-events: none;
 }
 
 button:hover {
@@ -33,6 +39,11 @@ button:hover > img {
     left: 2px;
 }
 
+table {
+    width: 80%;
+    box-sizing: border-box;
+}
+
 textarea {
     resize:none;
     width: 100%;
@@ -44,12 +55,16 @@ textarea {
     border: none;
 }
 
-textarea:focus {
-    border: 1px solid black;
-    resize: vertical;
+.active {
     pointer-events: all;
+    resize: vertical;
+    border: 1px solid black;
+    background-color: white
 }
 
+.activated {
+    background-color: #ff5e5e;
+}
 
 
 #main_list {
@@ -72,14 +87,25 @@ textarea:focus {
 }
 
 .fieldname {
-    padding-right: 10px;
+    padding-right: 0px;
+    width: 10%
 }
 
 .fieldentry {
     font-weight: 600;
     text-transform: uppercase;
-    background-color: #efefef;
+     background-color: #efefef;
     border: none;
+    width: 90%;
+    pointer-events: none;
+}
+
+.fieldentry_active{
+    background-color: white;
+    border: 1px solid black;
+    width: 90%;
+    text-transform: unset;
+    pointer-events: all;
 }
 
 .title {
